# lpr-solver-tool

./: .gitignore  CMakeLists.txt  README.md  build_for_web.bat  index.html
build-emc/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  lpr-solver-tool-web.html  lpr-solver-tool-web.js  lpr-solver-tool-web.wasm  lpr-solver-tool.html  lpr-solver-tool.js  lpr-solver-tool.wasm
src/: GuiHandler.cpp  GuiHandler.hpp  PrimalSolver.cpp  PrimalSolver.hpp  PrimalTwoPhaseBase.cpp  PrimalTwoPhaseBase.hpp  TwoPhase.cpp  TwoPhase.hpp  main.cpp  minshell.html
src/gui/: GuiHandler.cpp  GuiHandler.hpp
src/twoPhaseSimplex/: PrimalSolver.cpp  PrimalSolver.hpp  TwoPhase.cpp
src/widgets/: VirtualKeypad.hpp
